--- a/app/src/main/res/layout/tab_shared.xml
+++ b/app/src/main/res/layout/tab_shared.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshForShared"
     android:layout_width="match_parent"
@@ -15,27 +14,18 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="250dp">
+
             <ImageView
                 android:id="@+id/top_image_shared"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop" />
 
 
             <RelativeLayout
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/top_author_shared"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top|left"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginLeft="30dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="25sp" />
 
                 <TextView
                     android:id="@+id/top_title_shared"
@@ -45,8 +35,8 @@
                     android:layout_marginBottom="30dp"
                     android:layout_marginLeft="30dp"
                     android:fontFamily="sans-serif-light"
-                    android:textColor="#ffffff"
-                    android:textSize="18sp"
+                    android:textColor="#808080"
+                    android:textSize="25sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
