--- a/app/src/main/res/layout/tab_viewed.xml
+++ b/app/src/main/res/layout/tab_viewed.xml
@@ -45,8 +45,8 @@
                     android:layout_marginBottom="30dp"
                     android:layout_marginLeft="30dp"
                     android:fontFamily="sans-serif-light"
-                    android:textColor="#ffffff"
-                    android:textSize="18sp"
+                    android:textColor="#808080"
+                    android:textSize="25sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
