--- a/app/src/main/res/layout/news_layout_viewed.xml
+++ b/app/src/main/res/layout/news_layout_viewed.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="8dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:id="@+id/cardViewViewed">
 
     <LinearLayout
         android:layout_width="match_parent"
