--- a/app/src/main/res/layout/tab_emailed.xml
+++ b/app/src/main/res/layout/tab_emailed.xml
@@ -20,33 +20,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
-
-
-            <RelativeLayout
-                android:id="@+id/relativeLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/top_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top|left"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginLeft="30dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="#808080"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lstNewsEmailed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/relativeLayout"></android.support.v7.widget.RecyclerView>
+            android:layout_below="@id/top_image_emailed"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
