--- a/app/src/main/res/layout/news_layout_emailed.xml
+++ b/app/src/main/res/layout/news_layout_emailed.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewEmailed"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="8dp"
-    app:cardElevation="8dp"
-    android:id="@+id/cardViewEmailed">
+    app:cardElevation="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,31 +14,44 @@
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:weightSum="10">
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/article_image_emailed"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:scaleType="centerCrop"/>
-       <LinearLayout
-           android:orientation="vertical"
-           android:layout_margin="8dp"
-           android:layout_weight="8"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content">
-           <TextView
-               android:id="@+id/article_title_emailed"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="articleTitle"/>
-           <com.github.curioustechizen.ago.RelativeTimeTextView
-               android:id="@+id/article_time_emailed"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:textStyle="italic"
-               android:textSize="14sp"
-               />
-       </LinearLayout>
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="8"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/article_title_emailed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="articleTitle" />
+
+            <com.github.curioustechizen.ago.RelativeTimeTextView
+                android:id="@+id/article_time_emailed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/icon_image_download"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginVertical="40dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/icon_image_completed"
+            android:visibility="invisible"
+           />
 
     </LinearLayout>
 
